--- a/public/index.html
+++ b/public/index.html
@@ -222,51 +222,45 @@
               </a>
             </div>
 
-            <!-- Modern Social Links -->
-            <div class="flex gap-6 justify-center md:justify-start">
+            <div class="social-links">
               <a
                 href="https://github.com/atkooo"
-                class="social-link"
-                data-aos="fade-up"
-                data-aos-delay="100"
+                class="social-link animate-social"
                 target="_blank"
               >
-                <i class="fab fa-github text-xl"></i>
+                <i class="fab fa-twitter"></i>
+              </a>
+              <a
+                href="https://github.com/atkooo"
+                class="social-link animate-social"
+                style="animation-delay: 100ms"
+                target="_blank"
+              >
+                <i class="fab fa-github"></i>
               </a>
               <a
                 href="https://www.linkedin.com/in/okta-maulana/"
-                class="social-link"
-                data-aos="fade-up"
-                data-aos-delay="200"
+                class="social-link animate-social"
+                style="animation-delay: 200ms"
                 target="_blank"
               >
-                <i class="fab fa-linkedin text-xl"></i>
+                <i class="fab fa-linkedin"></i>
               </a>
               <a
-                href="https://x.com/_Atkoo"
-                class="social-link"
-                data-aos="fade-up"
-                data-aos-delay="300"
+                href="https://instagram.com/_okta_maulana"
+                class="social-link animate-social"
+                style="animation-delay: 300ms"
+                target="_blank"
               >
-                <i class="fab fa-twitter text-xl"></i>
+                <i class="fab fa-instagram"></i>
               </a>
-              <!-- instagram -->
-              <a
-                href="https://www.instagram.com/_okta_maulana/"
-                class="social-link"
-                data-aos="fade-up"
-                data-aos-delay="400"
-              >
-                <i class="fab fa-instagram text-xl"></i>
-              </a>
-              <!-- whatsapp -->
               <a
                 href="https://wa.me/6281522716223"
-                class="social-link"
-                data-aos="fade-up"
-                data-aos-delay="500"
+                class="social-link animate-social"
+                target="_blank"
+                style="animation-delay: 400ms"
               >
-                <i class="fab fa-whatsapp text-xl"></i>
+                <i class="fab fa-whatsapp"></i>
               </a>
             </div>
           </div>
