--- a/public/index.html
+++ b/public/index.html
@@ -558,7 +558,10 @@
         - Project cards dengan hover effects
         - Links ke demo dan source code
       -->
-      <section id="portofolio" class="py-20 px-4">
+      <section
+        id="portofolio"
+        class="min-h-screen py-12 sm:py-16 md:py-20 px-4"
+      >
         <div class="container mx-auto">
           <!-- Section Title -->
           <h2
@@ -702,7 +705,7 @@
         - Social media links
         - Contact info
       -->
-      <section id="contact" class="py-12 md:py-24 px-4">
+      <section id="contact" class="min-h-screen py-12 sm:py-16 md:py-20 px-4">
         <div class="container mx-auto">
           <!-- Section Title -->
           <h2
