--- a/public/index.html
+++ b/public/index.html
@@ -369,7 +369,7 @@
                     class="relative z-10 rounded-2xl overflow-hidden shadow-xl"
                   >
                     <img
-                      src="./images/4.jpg"
+                      src="./images/2.png"
                       alt="Profile Picture"
                       class="w-full h-auto transform hover:scale-105 transition-transform duration-500"
                     />
