--- a/public/index.html
+++ b/public/index.html
@@ -169,11 +169,11 @@
             data-aos="fade-right"
           >
             <div class="inline-block px-4 py-2 bg-primary/10 rounded-full">
-              <span class="text-primary font-medium"
-                >✨ Welcome to my portfolio</span
-              >
+              <span class="text-primary font-medium">
+                <i class="fa-solid fa-code text-lg mr-2"></i>
+                Welcome to my portfolio
+              </span>
             </div>
-
             <h1
               class="text-5xl md:text-7xl font-bold text-gray-800 dark:text-white"
             >
@@ -838,127 +838,127 @@
       - Social media
     -->
 
-    <footer class="bg-gray-900 text-gray-300 w-full">
-      <div class="w-full mx-auto py-8 px-4 sm:px-6 lg:px-8">
-        <!-- Update grid columns and gap -->
+    <footer
+      class="relative bg-white/80 dark:bg-primary-black/80 backdrop-blur-md border-t border-gray-200/20 dark:border-primary-gray/20 overflow-hidden"
+    >
+      <!-- Floating Shapes -->
+      <div
+        class="absolute top-10 left-10 w-32 h-32 bg-primary/10 rounded-full animate-bubble blur-3xl"
+      ></div>
+      <div
+        class="absolute bottom-10 right-10 w-40 h-40 bg-primary/5 rounded-full animate-bubble-delay-2 blur-3xl"
+      ></div>
+
+      <div class="relative w-full max-w-6xl mx-auto py-12 px-4 sm:px-6 lg:px-8">
         <div
-          class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 lg:gap-12"
+          class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-12 mb-12"
         >
-          <!-- About/Contact Column -->
-          <div class="space-y-4 md:col-span-2 lg:col-span-1">
-            <h3 class="text-2xl font-bold text-white mb-4">Okta Maulana</h3>
-            <p class="text-gray-400 leading-relaxed">
+          <!-- Brand Section -->
+          <div class="space-y-6 text-center sm:text-left">
+            <h3
+              class="text-2xl font-bold bg-gradient-to-r from-primary to-blue-500 bg-clip-text text-transparent"
+            >
+              Okta Maulana
+            </h3>
+            <p class="text-gray-600 dark:text-gray-400 leading-relaxed">
               Turning Ideas into Reality through Code and Creativity
             </p>
-            <div class="flex items-center space-x-2 text-gray-400">
+            <div
+              class="flex items-center justify-center sm:justify-start space-x-2 text-gray-600 dark:text-gray-400"
+            >
               <i class="fas fa-map-marker-alt text-primary"></i>
-              <span>Pontianak, Indonesia</span>
-            </div>
-            <div class="flex items-center space-x-2 text-gray-400">
-              <i class="fas fa-envelope text-primary"></i>
-              <span>oktamaulana12@gmail.com</span>
+              <span>Indonesia, Jakarta</span>
             </div>
           </div>
 
           <!-- Quick Links -->
-          <div class="md:mt-0">
-            <h3 class="text-xl font-semibold text-white mb-4">Quick Links</h3>
-            <ul class="grid grid-cols-2 md:grid-cols-1 gap-2">
-              <li>
-                <a
-                  href="#home"
-                  class="hover:text-primary transition-colors duration-300 flex items-center gap-2"
+          <div class="space-y-6 text-center sm:text-left">
+            <h4 class="text-lg font-semibold relative inline-block">
+              Quick Links
+              <span
+                class="absolute -bottom-2 left-0 w-12 h-1 bg-gradient-to-r from-primary to-blue-500 rounded-full"
+              ></span>
+            </h4>
+            <nav class="flex flex-col space-y-3">
+              <a href="#home" class="group w-fit mx-auto sm:mx-0">
+                <span
+                  class="relative text-gray-600 dark:text-gray-400 hover:text-primary dark:hover:text-primary transition-colors duration-300"
                 >
-                  <i class="fas fa-chevron-right text-xs text-primary"></i>
                   Home
-                </a>
-              </li>
-              <li>
-                <a
-                  href="#about"
-                  class="hover:text-primary transition-colors duration-300 flex items-center gap-2"
+                  <span
+                    class="absolute -bottom-1 left-0 w-0 h-0.5 bg-primary group-hover:w-full transition-all duration-300"
+                  ></span>
+                </span>
+              </a>
+              <a href="#about" class="group w-fit mx-auto sm:mx-0">
+                <span
+                  class="relative text-gray-600 dark:text-gray-400 hover:text-primary dark:hover:text-primary transition-colors duration-300"
                 >
-                  <i class="fas fa-chevron-right text-xs text-primary"></i>
                   About
-                </a>
-              </li>
-              <li>
-                <a
-                  href="#portfolio"
-                  class="hover:text-primary transition-colors duration-300 flex items-center gap-2"
+                  <span
+                    class="absolute -bottom-1 left-0 w-0 h-0.5 bg-primary group-hover:w-full transition-all duration-300"
+                  ></span>
+                </span>
+              </a>
+              <a href="#portofolio" class="group w-fit mx-auto sm:mx-0">
+                <span
+                  class="relative text-gray-600 dark:text-gray-400 hover:text-primary dark:hover:text-primary transition-colors duration-300"
                 >
-                  <i class="fas fa-chevron-right text-xs text-primary"></i>
                   Portfolio
-                </a>
-              </li>
-              <li>
-                <a
-                  href="#contact"
-                  class="hover:text-primary transition-colors duration-300 flex items-center gap-2"
+                  <span
+                    class="absolute -bottom-1 left-0 w-0 h-0.5 bg-primary group-hover:w-full transition-all duration-300"
+                  ></span>
+                </span>
+              </a>
+              <a href="#contact" class="group w-fit mx-auto sm:mx-0">
+                <span
+                  class="relative text-gray-600 dark:text-gray-400 hover:text-primary dark:hover:text-primary transition-colors duration-300"
                 >
-                  <i class="fas fa-chevron-right text-xs text-primary"></i>
                   Contact
-                </a>
-              </li>
-            </ul>
+                  <span
+                    class="absolute -bottom-1 left-0 w-0 h-0.5 bg-primary group-hover:w-full transition-all duration-300"
+                  ></span>
+                </span>
+              </a>
+            </nav>
           </div>
 
-          <!-- Newsletter -->
-          <div class="md:mt-0">
-            <h3 class="text-xl font-semibold text-white mb-4">Newsletter</h3>
-            <p class="text-gray-400 mb-4 max-w-md">
-              Subscribe to stay updated with my latest projects and tech
-              articles.
-            </p>
-            <form class="flex gap-2 max-w-md">
-              <input
-                type="email"
-                placeholder="Enter your email"
-                class="bg-gray-800 text-gray-100 px-4 py-2 rounded-lg focus:outline-none focus:ring-2 focus:ring-primary flex-1 w-full"
-              />
-              <button
-                type="submit"
-                class="bg-primary text-white px-4 py-2 rounded-lg hover:bg-primary/90 transition-colors duration-300 whitespace-nowrap"
-              >
-                <i class="fas fa-paper-plane"></i>
-              </button>
-            </form>
-          </div>
-        </div>
-      </div>
-
-      <!-- Bottom Bar -->
-      <div class="border-t border-gray-800">
-        <div class="container mx-auto px-4 py-6">
-          <div
-            class="flex flex-col md:flex-row justify-between items-center gap-4"
-          >
-            <p class="text-gray-400 text-center md:text-left">
-              © 2024 Okta Maulana. All rights reserved.
-            </p>
-
-            <!-- Social Links -->
-            <div class="flex gap-6">
-              <a
-                href="https://github.com/atkooo"
-                class="hover:text-primary transition-colors duration-300"
-              >
+          <!-- Social Links -->
+          <div class="space-y-6 text-center sm:text-left">
+            <h4 class="text-lg font-semibold relative inline-block">
+              Connect
+              <span
+                class="absolute -bottom-2 left-0 w-12 h-1 bg-gradient-to-r from-primary to-blue-500 rounded-full"
+              ></span>
+            </h4>
+            <div class="flex justify-center sm:justify-start gap-4">
+              <a href="https://github.com/atkooo" class="social-link group">
                 <i class="fab fa-github text-xl"></i>
               </a>
               <a
                 href="https://www.linkedin.com/in/okta-maulana/"
-                class="hover:text-primary transition-colors duration-300"
+                class="social-link group"
               >
                 <i class="fab fa-linkedin text-xl"></i>
               </a>
               <a
-                href="https://x.com/_Atkoo"
-                class="hover:text-primary transition-colors duration-300"
+                href="https://instagram.com/_okta_maulana"
+                class="social-link group"
               >
-                <i class="fab fa-twitter text-xl"></i>
+                <i class="fab fa-instagram text-xl"></i>
               </a>
             </div>
           </div>
+        </div>
+
+        <!-- Copyright -->
+        <div
+          class="pt-8 mt-8 border-t border-gray-200/20 dark:border-primary-gray/20 text-center"
+        >
+          <p class="text-sm text-gray-600 dark:text-gray-400">
+            © 2024 <span class="text-primary">Okta Maulana</span>. All rights
+            reserved.
+          </p>
         </div>
       </div>
     </footer>
