--- a/public/index.html
+++ b/public/index.html
@@ -112,7 +112,19 @@
     <!-- ==================== -->
     <!-- KONTEN UTAMA -->
     <!-- ==================== -->
-    <main>
+    <main class="relative">
+      <!-- Background Wrapper -->
+      <div class="fixed inset-0 overflow-hidden pointer-events-none">
+        <div
+          class="bubble-effect animate-bubble bg-primary/20 dark:bg-primary/10 w-[40vw] h-[40vw] rounded-full fixed top-[10vh] -left-[10vw]"
+        ></div>
+        <div
+          class="bubble-effect animate-bubble-delay-2 bg-blue-400/20 dark:bg-blue-400/10 w-[45vw] h-[45vw] rounded-full fixed -bottom-[15vh] -right-[10vw]"
+        ></div>
+        <div
+          class="bubble-effect animate-bubble-delay-4 bg-purple-400/20 dark:bg-purple-400/10 w-[35vw] h-[35vw] rounded-full fixed top-[40vh] left-[20vw]"
+        ></div>
+      </div>
       <!-- ==================== -->
       <!-- SECTION: HOME -->
       <!-- ==================== -->
@@ -123,49 +135,16 @@
         - Gambar profil dengan efek
         - Social media links
       -->
+
       <section
         id="home"
         class="min-h-screen flex items-center justify-center pt-24 md:pt-32 px-8 relative"
       >
-        <!-- Background decorative elements -->
-        <div class="absolute inset-0 overflow-visible pointer-events-none">
-          <!-- Main bubbles with adjusted colors and opacity -->
-          <div
-            class="bubble-effect animate-bubble bg-primary/20 dark:bg-primary/10 rounded-full w-80 h-80 absolute top-20 left-20"
-          ></div>
-          <div
-            class="bubble-effect animate-bubble-delay-2 bg-blue-500/20 dark:bg-blue-500/10 rounded-full w-64 h-64 absolute top-40 right-40"
-          ></div>
-          <div
-            class="bubble-effect animate-bubble-delay-4 bg-primary/20 dark:bg-primary/10 rounded-full w-72 h-72 absolute bottom-40 left-1/3"
-          ></div>
-
-          <!-- Smaller decorative bubbles with adjusted opacity -->
-          <div
-            class="w-8 h-8 bg-primary/30 dark:bg-primary/20 rounded-full absolute top-1/4 left-1/3 animate-float"
-          ></div>
-          <div
-            class="w-6 h-6 bg-blue-500/30 dark:bg-blue-500/20 rounded-full absolute top-1/3 right-1/4 animate-float delay-2"
-          ></div>
-          <div
-            class="w-4 h-4 bg-primary/30 dark:bg-primary/20 rounded-full absolute bottom-1/4 right-1/3 animate-float delay-4"
-          ></div>
-        </div>
         <div
-          class="absolute inset-0 bg-gradient-to-b from-transparent to-white/5 dark:to-gray-900/5 pointer-events-none"
-        ></div>
-
-        <!-- Floating shapes -->
-        <div
-          class="absolute top-1/4 left-10 w-20 h-20 bg-primary/20 rounded-2xl animate-float"
-        ></div>
-
-        <div
-          class="w-full max-w-6xl mx-auto grid grid-cols-1 lg:grid-cols-2 gap-8 items-center"
+          class="w-full max-w-6xl mx-auto grid grid-cols-1 lg:grid-cols-2 gap-12 items-center relative z-10"
         >
-          <!-- Text Content -->
           <div
-            class="order-2 md:order-1 text-center md:text-left space-y-6"
+            class="order-2 md:order-1 text-center md:text-left space-y-8"
             data-aos="fade-right"
           >
             <div class="inline-block px-4 py-2 bg-primary/10 rounded-full">
@@ -179,7 +158,6 @@
             >
               I'm <span class="text-primary">Okta</span> Maulana
             </h1>
-
             <div
               class="typewriter text-xl md:text-2xl text-gray-600 dark:text-gray-300"
             >
@@ -187,7 +165,9 @@
               <span class="cursor">|</span>
             </div>
 
-            <p class="text-gray-600 dark:text-gray-400 text-lg leading-relaxed">
+            <p
+              class="text-gray-600 dark:text-gray-400 text-lg leading-relaxed max-w-2xl"
+            >
               Hello, I'm Okta Maulana, a software developer interested in new
               technologies and always eager to solve problems with innovative
               solutions.
@@ -222,7 +202,7 @@
               </a>
             </div>
 
-            <div class="social-links">
+            <div class="social-links pt-4">
               <a
                 href="https://github.com/atkooo"
                 class="social-link animate-social"
@@ -266,7 +246,6 @@
           </div>
 
           <!-- Image Content -->
-          <!-- Profile Image Container -->
           <div class="relative w-full aspect-square max-w-[400px] mx-auto">
             <div
               class="absolute inset-0 bg-gradient-to-b from-primary/10 to-transparent rounded-full"
