--- a/public/index.html
+++ b/public/index.html
@@ -849,7 +849,7 @@
                 class="flex items-center justify-center sm:justify-start space-x-2 text-gray-600 dark:text-gray-400"
               >
                 <i class="fas fa-map-marker-alt text-primary"></i>
-                <span>Indonesia, Jakarta</span>
+                <span>Indonesia, Pontianak</span>
               </div>
             </div>
 
