--- a/public/index.html
+++ b/public/index.html
@@ -121,9 +121,6 @@
         <div
           class="bubble-effect animate-bubble-delay-2 bg-blue-400/20 dark:bg-blue-400/10 w-[45vw] h-[45vw] rounded-full fixed -bottom-[15vh] -right-[10vw]"
         ></div>
-        <div
-          class="bubble-effect animate-bubble-delay-4 bg-purple-400/20 dark:bg-purple-400/10 w-[35vw] h-[35vw] rounded-full fixed top-[40vh] left-[20vw]"
-        ></div>
       </div>
       <!-- ==================== -->
       <!-- SECTION: HOME -->
@@ -548,7 +545,9 @@
             data-aos="fade-up"
           >
             My Portfolio
-            <div class="w-24 h-1 bg-primary mx-auto mt-4 rounded-full"></div>
+            <div
+              class="w-24 h-1 bg-gradient-to-r from-primary to-blue-500 mx-auto mt-4 rounded-full"
+            ></div>
           </h2>
 
           <!-- Filter Buttons -->
@@ -692,7 +691,9 @@
             data-aos="fade-up"
           >
             Contact Me
-            <div class="w-24 h-1 bg-primary mx-auto mt-4 rounded-full"></div>
+            <div
+              class="w-24 h-1 bg-gradient-to-r from-primary to-blue-500 mx-auto mt-4 rounded-full"
+            ></div>
           </h2>
 
           <!-- Card Wrapper -->
