--- a/public/index.html
+++ b/public/index.html
@@ -953,6 +953,13 @@
     <!-- Script utama website -->
     <script src="./js/main.js"></script>
     <!-- Library AOS untuk animasi scroll -->
+    <script
+      src="https://cdn.lrkt-in.com/LogRocket.min.js"
+      crossorigin="anonymous"
+    ></script>
+    <script>
+      window.LogRocket && window.LogRocket.init("8xuybu/okta-project-website");
+    </script>
     <script src="js/aos.js"></script>
   </body>
 </html>
