--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,32 @@
   </head>
 
   <body>
+    <!-- Welcome Modal -->
+    <div
+      id="welcomeModal"
+      class="fixed inset-0 z-50 flex items-center justify-center bg-black/50 backdrop-blur-sm"
+    >
+      <div
+        class="bg-white dark:bg-gray-800 rounded-xl p-8 max-w-md w-full mx-4 transform transition-all"
+      >
+        <h2 class="text-2xl font-bold mb-4">Welcome to My Portfolio!</h2>
+        <p class="text-gray-600 dark:text-gray-400 mb-6">
+          Please enter your name to continue:
+        </p>
+        <input
+          type="text"
+          id="visitorName"
+          placeholder="Your name (optional)"
+          class="w-full px-4 py-3 bg-gray-100 dark:bg-gray-700 rounded-xl border-2 border-transparent focus:border-primary focus:ring-2 focus:ring-primary/20 transition-all duration-300 mb-6"
+        />
+        <button
+          id="continueBtn"
+          class="w-full px-6 py-3 bg-primary text-white rounded-xl hover:bg-primary/90 transform hover:-translate-y-0.5 transition-all duration-300"
+        >
+          Continue
+        </button>
+      </div>
+    </div>
     <!-- ==================== -->
     <!-- NAVIGASI -->
     <!-- ==================== -->
@@ -959,6 +985,15 @@
     ></script>
     <script>
       window.LogRocket && window.LogRocket.init("8xuybu/okta-project-website");
+
+      // Get saved visitor name if exists
+      const savedVisitorName = localStorage.getItem("visitorName");
+      if (savedVisitorName && window.LogRocket) {
+        LogRocket.identify(Date.now().toString(), {
+          name: savedVisitorName,
+          visitedAt: new Date().toISOString(),
+        });
+      }
     </script>
     <script src="js/aos.js"></script>
   </body>
