--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     <!-- Welcome Modal -->
     <div
       id="welcomeModal"
-      class="fixed inset-0 z-50 flex items-center justify-center bg-black/50 backdrop-blur-sm"
+      class="fixed inset-0 z-50 flex items-center justify-center bg-black/50 backdrop-blur-sm hidden"
     >
       <div
         class="bg-white dark:bg-gray-800 rounded-xl p-8 max-w-md w-full mx-4 transform transition-all"
