--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
       <div
         class="bg-white dark:bg-gray-800 rounded-xl p-8 max-w-md w-full mx-4 transform transition-all"
       >
-        <h2 class="text-2xl font-bold mb-4">Welcome to My Portfolio!</h2>
+        <h2 class="text-2xl font-bold mb-4">Welcome to My Journey!</h2>
         <p class="text-gray-600 dark:text-gray-400 mb-6">
           Please enter your name to continue:
         </p>
@@ -173,7 +173,7 @@
             <div class="inline-block px-4 py-2 bg-primary/10 rounded-full">
               <span class="text-primary font-medium">
                 <i class="fa-solid fa-code text-lg mr-2"></i>
-                Welcome to my portfolio
+                Welcome to my Journey
               </span>
             </div>
             <h1
@@ -277,7 +277,7 @@
               class="w-full h-full rounded-full border-4 border-primary/20 overflow-hidden shadow-xl"
             >
               <img
-                src="./images/22.png"
+                src="./images/23.png"
                 alt="Profile"
                 class="w-full h-full object-cover object-center"
                 loading="eager"
@@ -965,7 +965,7 @@
     <!-- Script utama website -->
     <script src="./js/main.js"></script>
     <!-- Library AOS untuk animasi scroll -->
-    <script
+    <!-- <script
       src="https://cdn.lrkt-in.com/LogRocket.min.js"
       crossorigin="anonymous"
     ></script>
@@ -978,7 +978,7 @@
           visitedAt: new Date().toISOString(),
         });
       }
-    </script>
+    </script> -->
     <!-- <script>
       var disqus_config = function () {
         const hostname = window.location.hostname;
