--- a/public/index.html
+++ b/public/index.html
@@ -38,11 +38,11 @@
           type="text"
           id="visitorName"
           placeholder="Your name (optional)"
-          class="w-full px-4 py-3 bg-gray-100 dark:bg-gray-700 rounded-xl border-2 border-transparent focus:border-primary focus:ring-2 focus:ring-primary/20 transition-all duration-300 mb-6"
+          class="input-base w-full px-4 py-3 bg-gray-100 dark:bg-gray-700 rounded-xl border-2 border-transparent focus:border-primary focus:ring-2 focus:ring-primary/20 transition-all duration-300 mb-6"
         />
         <button
           id="continueBtn"
-          class="w-full px-6 py-3 bg-primary text-white rounded-xl hover:bg-primary/90 transform hover:-translate-y-0.5 transition-all duration-300"
+          class="btn-primary w-full px-6 py-3 bg-primary text-white rounded-xl hover:bg-primary/90 transform hover:-translate-y-0.5 transition-all duration-300"
         >
           Continue
         </button>
@@ -321,7 +321,7 @@
             <div class="space-y-8" data-aos="fade-right">
               <!-- Info Card -->
               <div
-                class="p-6 bg-white/50 dark:bg-gray-800/50 backdrop-blur-sm rounded-2xl shadow-lg"
+                class="card-base p-6 bg-white/50 dark:bg-gray-800/50 backdrop-blur-sm rounded-2xl shadow-lg"
               >
                 <h3 class="text-2xl font-bold text-primary mb-4">
                   Software Engineer
@@ -354,7 +354,7 @@
 
               <!-- Education -->
               <div
-                class="p-6 bg-white/50 dark:bg-gray-800/50 backdrop-blur-sm rounded-2xl shadow-lg"
+                class="card-base p-6 bg-white/50 dark:bg-gray-800/50 backdrop-blur-sm rounded-2xl shadow-lg"
               >
                 <h3 class="text-2xl font-bold text-primary mb-6">Education</h3>
                 <div class="space-y-6">
@@ -411,7 +411,7 @@
             <div class="space-y-8" data-aos="fade-left">
               <!-- Skills Progress -->
               <div
-                class="p-6 bg-white/50 dark:bg-gray-800/50 backdrop-blur-sm rounded-2xl shadow-lg"
+                class="card-base p-6 bg-white/50 dark:bg-gray-800/50 backdrop-blur-sm rounded-2xl shadow-lg"
               >
                 <h3 class="text-2xl font-bold text-primary mb-6">
                   Skills & Expertise
@@ -455,7 +455,7 @@
 
               <!-- Experience Timeline -->
               <div
-                class="p-6 bg-white/50 dark:bg-gray-800/50 backdrop-blur-sm rounded-2xl shadow-lg"
+                class="card-base p-6 bg-white/50 dark:bg-gray-800/50 backdrop-blur-sm rounded-2xl shadow-lg"
               >
                 <h3 class="text-2xl font-bold text-primary mb-6">Experience</h3>
                 <div
@@ -713,7 +713,7 @@
           <!-- Card Wrapper -->
           <div class="max-w-2xl mx-auto">
             <div
-              class="bg-white dark:bg-gray-800 rounded-xl shadow-lg p-6 md:p-8"
+              class="card-base bg-white dark:bg-gray-800 rounded-xl shadow-lg p-6 md:p-8"
               data-aos="fade-up"
             >
               <!-- Content Side -->
@@ -755,7 +755,7 @@
                         name="name"
                         required
                         placeholder="Your Name"
-                        class="w-full px-4 py-3 bg-gray-100 dark:bg-gray-800 rounded-xl border-2 border-transparent focus:border-primary focus:ring-2 focus:ring-primary/20 transition-all duration-300"
+                        class="input-base w-full px-4 py-3 bg-gray-100 dark:bg-gray-800 rounded-xl border-2 border-transparent focus:border-primary focus:ring-2 focus:ring-primary/20 transition-all duration-300"
                       />
                     </div>
                     <!-- tes -->
@@ -766,7 +766,7 @@
                         name="email"
                         required
                         placeholder="user@example.com"
-                        class="w-full px-4 py-3 bg-gray-100 dark:bg-gray-800 rounded-xl border-2 border-transparent focus:border-primary focus:ring-2 focus:ring-primary/20 transition-all duration-300"
+                        class="input-base w-full px-4 py-3 bg-gray-100 dark:bg-gray-800 rounded-xl border-2 border-transparent focus:border-primary focus:ring-2 focus:ring-primary/20 transition-all duration-300"
                       />
                     </div>
                   </div>
@@ -778,7 +778,7 @@
                       name="subject"
                       required
                       placeholder="Project Inquiry"
-                      class="w-full px-4 py-3 bg-gray-100 dark:bg-gray-800 rounded-xl border-2 border-transparent focus:border-primary focus:ring-2 focus:ring-primary/20 transition-all duration-300"
+                      class="input-base w-full px-4 py-3 bg-gray-100 dark:bg-gray-800 rounded-xl border-2 border-transparent focus:border-primary focus:ring-2 focus:ring-primary/20 transition-all duration-300"
                     />
                   </div>
 
@@ -789,13 +789,13 @@
                       required
                       rows="4"
                       placeholder="Your message here..."
-                      class="w-full px-4 py-3 bg-gray-100 dark:bg-gray-800 rounded-xl border-2 border-transparent focus:border-primary focus:ring-2 focus:ring-primary/20 transition-all duration-300 resize-none"
+                      class="input-base w-full px-4 py-3 bg-gray-100 dark:bg-gray-800 rounded-xl border-2 border-transparent focus:border-primary focus:ring-2 focus:ring-primary/20 transition-all duration-300 resize-none"
                     ></textarea>
                   </div>
 
                   <button
                     type="submit"
-                    class="w-auto px-6 py-3 bg-primary text-white rounded-xl hover:bg-primary/90 transform hover:-translate-y-0.5 transition-all duration-300 flex items-center justify-center gap-2 group"
+                    class="btn-primary w-auto px-6 py-3 bg-primary text-white rounded-xl hover:bg-primary/90 transform hover:-translate-y-0.5 transition-all duration-300 flex items-center justify-center gap-2 group"
                   >
                     <span>Send Message</span>
                     <svg
