--- a/public/index.html
+++ b/public/index.html
@@ -410,12 +410,12 @@
                     </div>
                     <div>
                       <h4 class="font-semibold text-lg">
-                        Bachelor of Computer Science
+                        Associate Degree in Computer Science
                       </h4>
                       <p class="text-gray-600 dark:text-gray-400">
                         Politeknik Negeri Pontianak
                       </p>
-                      <p class="text-sm text-gray-500">2019 - 2023</p>
+                      <p class="text-sm text-gray-500">2021 - 2024</p>
                     </div>
                   </div>
                   <div class="flex gap-4 items-start group">
@@ -427,9 +427,9 @@
                     <div>
                       <h4 class="font-semibold text-lg">High School</h4>
                       <p class="text-gray-600 dark:text-gray-400">
-                        SMAN 9 Pontianak
+                        SMKN 1 Sintang
                       </p>
-                      <p class="text-sm text-gray-500">2016 - 2019</p>
+                      <p class="text-sm text-gray-500">2017 - 2020</p>
                     </div>
                   </div>
 
@@ -442,9 +442,9 @@
                     <div>
                       <h4 class="font-semibold text-lg">Junior High School</h4>
                       <p class="text-gray-600 dark:text-gray-400">
-                        SMPN 10 Pontianak
+                        MTSN Sintang
                       </p>
-                      <p class="text-sm text-gray-500">2013 - 2016</p>
+                      <p class="text-sm text-gray-500">2014 - 2017</p>
                     </div>
                   </div>
                 </div>
