--- a/public/index.html
+++ b/public/index.html
@@ -410,7 +410,7 @@
                     </div>
                     <div>
                       <h4 class="font-semibold text-lg">
-                        Associate Degree in Computer Science
+                        associate degree of Informatic Engineering
                       </h4>
                       <p class="text-gray-600 dark:text-gray-400">
                         Politeknik Negeri Pontianak
@@ -504,67 +504,7 @@
                 <h3 class="text-2xl font-bold text-primary mb-6">Experience</h3>
                 <div
                   class="relative space-y-8 before:absolute before:inset-0 before:ml-5 before:h-full before:w-0.5 before:bg-gradient-to-b before:from-primary before:to-blue-500"
-                >
-                  <!-- Timeline Item -->
-                  <div class="relative flex gap-6 items-start ml-2">
-                    <div
-                      class="flex items-center justify-center w-10 h-10 rounded-full border-2 border-primary bg-white dark:bg-gray-800 z-10"
-                    >
-                      <i class="fas fa-briefcase text-primary"></i>
-                    </div>
-                    <div class="flex flex-col flex-1 gap-2">
-                      <h4 class="text-lg font-semibold">Senior Developer</h4>
-                      <p class="text-gray-600 dark:text-gray-400">
-                        Company Name
-                      </p>
-                      <p class="text-sm text-gray-500">2022 - Present</p>
-                      <p class="text-gray-600 dark:text-gray-400">
-                        Led development of multiple web applications using
-                        modern technologies.
-                      </p>
-                    </div>
-                    <!-- add more  -->
-                  </div>
-                  <!-- Timeline Item 2 -->
-                  <div class="relative flex gap-6 items-start ml-2">
-                    <div
-                      class="flex items-center justify-center w-10 h-10 rounded-full border-2 border-primary bg-white dark:bg-gray-800 z-10"
-                    >
-                      <i class="fas fa-code text-primary"></i>
-                    </div>
-                    <div class="flex flex-col flex-1 gap-2">
-                      <h4 class="text-lg font-semibold">Software Developer</h4>
-                      <p class="text-gray-600 dark:text-gray-400">
-                        Tech Company
-                      </p>
-                      <p class="text-sm text-gray-500">2020 - 2022</p>
-                      <p class="text-gray-600 dark:text-gray-400">
-                        Developed and maintained web applications using modern
-                        JavaScript frameworks.
-                      </p>
-                    </div>
-                  </div>
-
-                  <!-- Timeline Item 3 -->
-                  <div class="relative flex gap-6 items-start ml-2">
-                    <div
-                      class="flex items-center justify-center w-10 h-10 rounded-full border-2 border-primary bg-white dark:bg-gray-800 z-10"
-                    >
-                      <i class="fas fa-laptop-code text-primary"></i>
-                    </div>
-                    <div class="flex flex-col flex-1 gap-2">
-                      <h4 class="text-lg font-semibold">Junior Developer</h4>
-                      <p class="text-gray-600 dark:text-gray-400">
-                        Startup Inc
-                      </p>
-                      <p class="text-sm text-gray-500">2019 - 2020</p>
-                      <p class="text-gray-600 dark:text-gray-400">
-                        Started career as a junior developer working on frontend
-                        projects.
-                      </p>
-                    </div>
-                  </div>
-                </div>
+                ></div>
               </div>
             </div>
           </div>
